Log of major changes (goes back to times before git version control)
---------------------------------------------------------------------

28 Dec 2023: Shifted lower boundary condition for thermal solver by half a layer.

12 May 2023: Release v1.2.1  doi:10.5281/zenodo.7931987

30 Dec 2022: Release v1.2.0  doi:10.5281/zenodo.7495755
First release without MSIM

19 May 2022: Moved MSIM out of PCC

27 Apr 2022: Release v1.1.9  DOI:10.5281/zenodo.6499678
Last release that includes MSIM. MSIM now has its own repository, and future releases of the Planetary-Code-Collection will no longer include MSIM.

26 Dec 2021: Release v1.1.8  doi:10.5281/zenodo.5805461

14 Sep 2021: core of view factor calculations redone in cartesian rather than spherical coordinates

8 Sep 2021: added truncated SVD as method to calculate approximate terrain irradiance

4 Apr 2021: added Matlab versions of the Crank-Nicolson solvers conductionT/Q

Mar 2021: added Python versions of the Crank-Nicolson solvers conductionT/Q

Jan 2021: added mars_mapii, which has the same functionality as mars_mapi, but uses simple iterations to calculate the equilibrium ice table depth instead of the bisection method. Both use the thermal model in jsub.

Jan 2021: replaced many array allocations of static length NMAX with user-defined length NZ.

18 Jul 2020: Release v1.1.7  doi:10.5281/zenodo.3951242

10 Jul 2020: merged psv + psv2 + psv3, and changed default parameterization to psv2.

2 Jul 2020: renamed Exosphere/ into Exospheres/

29 Jun 2020: added basic lunar ice pump code to Lunar/. Lunar/ is a new directory that will contain miscellaneous model code for the Moon. The lunar exosphere model will stay in Exosphere/ and the 3D terrain irradiance model will stay in Topo3D/.

21 Jun 2020: added subl_h2o

27 May 2020: changed psv3, added psv2 (parametrizations for saturation vapor pressure)

22 May 2020: added patm as input to Mars/jsubv; changed default hemispheric Tco2frost temperatures
