@@ -1,6 +1,8 @@
 Log of major changes (goes back to times before git version control)
 ---------------------------------------------------------------------
 
+2 Jan 2024: Added Volterra predictor to conductionQ. (This is a long story.)
+
 28 Dec 2023: Shifted lower boundary condition for thermal solver by half a layer.
 
 12 May 2023: Release v1.2.1  doi:10.5281/zenodo.7931987
